--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.0.0",
 		"eslint": "^7.32.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-react": "^7.26.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-plugin-sonarjs": "^0.11.0",
 		"redux-devtools-extension": "^2.13.9",
 		"typescript": "^4.5.2"
 	}
