--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,4 @@
 {
 	"presets": ["@babel/env", "@babel/typescript", "@babel/react"],
-	"plugins": [
-		[
-			"effector-logger/babel-plugin",
-			{
-				"inspector": true,
-				"effector": { "factories": ["@farfetched/core"] }
-			}
-		]
-	]
+	"plugins": ["effector/babel-plugin"]
 }
