--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
 		"@mui/material": "^5.11.13",
 		"atomic-router": "^0.8.0",
 		"atomic-router-react": "^0.8.1",
-		"axios": "^1.3.4",
 		"classnames": "^2.3.2",
+		"compose-function": "^3.0.3",
 		"dayjs": "^1.11.7",
 		"effector": "^22.7.0",
+		"effector-forms": "^0.0.24",
 		"effector-react": "^22.5.1",
 		"history": "^5.3.0",
 		"joi": "^17.8.4",
+		"ky": "^0.33.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.43.7",
@@ -41,7 +43,9 @@
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.21.0",
+		"@feature-sliced/eslint-config": "^0.1.0-beta.6",
 		"@rollup/plugin-babel": "^6.0.3",
+		"@types/compose-function": "^0.0.30",
 		"@types/node": "^18.15.3",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
@@ -49,7 +53,6 @@
 		"@typescript-eslint/parser": "^5.55.0",
 		"@vitejs/plugin-react": "^3.1.0",
 		"effector-inspector": "^0.14.0",
-		"effector-logger": "^0.13.7",
 		"eslint": "^8.36.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^8.7.0",
@@ -57,6 +60,7 @@
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-sonarjs": "^0.18.0",
 		"husky": "^8.0.3",
+		"lint-staged": "^13.2.0",
 		"prettier": "^2.8.4",
 		"typed-css-modules": "^0.7.2",
 		"typescript": "^5.0.2",
