--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"history": "^5.3.0",
 		"joi": "^17.8.4",
 		"ky": "^0.33.3",
+		"patronum": "^1.16.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.43.7",
